--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <ul>
-      <li><a href="/transition.html">Transition</a></li>
-      <li><a href="/css-transition.html">CSSTransition</a></li>
-      <li><a href="/transition-group.html">TransitionGroup</a></li>
+      <li><a href="transition.html">Transition</a></li>
+      <li><a href="css-transition.html">CSSTransition</a></li>
+      <li><a href="transition-group.html">TransitionGroup</a></li>
     </ul>
   </body>
 </html>
