feat: オリジナルの react-transition-group の例を追加

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,23 @@
     <title>Reinvent React Transition Group</title>
   </head>
   <body>
-    <ul>
-      <li><a href="transition.html">Transition</a></li>
-      <li><a href="css-transition.html">CSSTransition</a></li>
-      <li><a href="transition-group.html">TransitionGroup</a></li>
-    </ul>
+    <main>
+      <section>
+        <h2>Original (react-transition-group)</h2>
+        <ul>
+          <li><a href="original/transition.html">Transition</a></li>
+          <li><a href="original/css-transition.html">CSSTransition</a></li>
+          <li><a href="original/transition-group.html">TransitionGroup</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Reinvent</h2>
+        <ul>
+          <li><a href="reinvent/transition.html">Transition</a></li>
+          <li><a href="reinvent/css-transition.html">CSSTransition</a></li>
+          <li><a href="reinvent/transition-group.html">TransitionGroup</a></li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
