fix: title of css-transition

--- a/original/css-transition.html
+++ b/original/css-transition.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Reinvented CSSTransition Example</title>
+    <title>Original CSSTransition Example</title>
     <link href="/styles/css-transition.css" rel="stylesheet" />
   </head>
   <body>
